# wahoo-ble-sniffer

./: .coverage  .dockerignore  .flake8  .gitignore  Blu Sniffer.sln  CHANGELOG.md  CONTRIBUTING.md  PAIRING_HELP.md  README.md  build_exe.py  conftest.py  coverage.json  find_wahoo_devices.py  pyproject.toml  quick_find.py  requirements.txt  wahoo_ble_logger.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-app.yml
UnityIntegration/: BikeMovementController.cs  CONSTANT_DATAFLOW_FIX.md  GARMIN_SETUP.md  GETTING_STARTED.md  GRATIS_LØSNING.md  INSTALL.bat  INSTALL.command  LATENCY_AND_STOP_FIXES.md  OVERSIGT.md  QUICKSTART.md  QUICK_START.md  README.md  README_ANBEFALING.md  START_GARMIN_BRIDGE.bat  START_GARMIN_BRIDGE.command  START_GUI.bat  START_GUI.command  START_HER.md  START_MOCK_BRIDGE.bat  START_MOCK_BRIDGE.command  START_WAHOO_BRIDGE.bat  START_WAHOO_BRIDGE.command  START_WAHOO_BRIDGE.ps1  UNITY_SETUP_GUIDE.md  VERIFICATION.md  VRBikeController.cs  VrsCrc32.cs  VrsFileWriterEvents.cs  VrsFormats.cs  VrsLoggerHud.cs  VrsSessionLogger.cs  WahooBLEManager.cs  WahooDataReceiver.cs  WahooDataReceiver_Optimized.cs  __init__.py  mock_wahoo_bridge.py  package.json  test_bridge.py  wahoo_bridge_gui.py  wahoo_unity_bridge.py  (+1 more)
UnityIntegration/UnityClient/: WahooWsClient.cs
UnityIntegration/UnityCompileCheck/: UnityCompileCheck.csproj  UnityEngineStubs.cs
UnityIntegration/docs/: OVERSIGT.md  QUICKSTART.md  (+6 more)
WahooBleLoggerCSharp/: Program.cs  README.md  WahooBleLogger.csproj
analysis/: PR_DESCRIPTION.md  generate_mock_data.py  inspect_parquets.py  quick_analysis_executed.ipynb  recompute_summary.py  run_more_plots.py  run_quick_plots.py  session_summary.csv
bridge/: README.md  __init__.py  bike_bridge.py  collector_tail.py  forward_to_analytics.py  mock_wahoo_bridge.py  populate_test_data.py  test_collector.py  wahoo_bridge_gui.py
collector_out/: vrs.sqlite
deployment/: README.md
docs/: DBSENDER.md  KUBERNETES_GUIDE.md  OVERSIGT.md  PAIRING_HELP.md  QUICKSTART.md  README_CSHARP.md  README_VRS.md  START_HER.md  UNITY_SETUP_GUIDE.md  VERIFICATION.md
live_analytics/: README.md  populate_demo_data.py  requirements.txt
python/: __init__.py  find_wahoo_devices.py  quick_find.py  wahoo_ble_logger.py
scripts/: check_bridge_port.sh  run_bridge_with_log.sh
starters/: INSTALL.bat  INSTALL.command  START_ALL.bat  START_ALL.command  START_BRIDGE.bat  START_BRIDGE.command  START_GUI.bat  START_GUI.command  START_K8S.bat  START_K8S.command  START_K8S.ps1  START_MOCK_BRIDGE.bat  START_MOCK_BRIDGE.command  STOP_K8S.bat  STOP_K8S.command  STOP_K8S.ps1  launcher.py  preflight.py  preflight_windows.py
tests/: conftest.py  test_bridge_coverage.py  test_bridge_extra.py  test_collector_db.py  test_collector_db_edgecases.py  test_collector_extra.py  test_collector_integration_e2e.py  test_collector_integration_vrsf.py  test_collector_parquet_param.py  test_collector_schema_and_timestamps.py  test_collector_timestamps_schema.py  test_db_edgecases.py  test_db_utils.py  test_disconnections.py  test_gui.py  test_gui_coverage.py  test_mock_data.py  test_mock_integration.py  test_mssql_flush.py  test_parquet_buffer.py  test_parser.py  test_readable_views_export.py  test_recv_ts_ns_is_unix_epoch.py  test_session_logger.py  test_sqlite_logger.py  test_telemetry_records_db.py  test_vrsf_parsing.py  test_windows_compat.py
unity/: BikeMovementController.cs  DBSender.cs  Dashboard.cs  PulseSender.cs  SpawnZoneTrigger.cs
(+344 files in other folders)
