[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wahoo-ble-sniffer"
version = "0.1.0"
description = "Wahoo BLE -> WebSocket bridge and Unity integration tools"
readme = "UnityIntegration/README.md"
license = { text = "MIT" }
authors = [ { name = "jonasbuc" } ]
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
  "bleak>=0.21.0",
  "websockets>=12.0",
  "fastapi>=0.104,<1",
  "uvicorn[standard]>=0.24,<1",
  "pydantic>=2,<3",
  "requests>=2.31,<3",
  "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "flake8>=6.0",
  "mypy>=1.9.0",
  "coverage>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["UnityIntegration*", "live_analytics*"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "live_analytics/tests",
  "live_analytics/system_check/tests",
  "live_analytics/questionnaire/tests",
]
python_files = "test_*.py"
