[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wahoo-ble-sniffer"
version = "0.1.0"
description = "Wahoo BLE -> WebSocket bridge and Unity integration tools"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "jonasbuc" } ]
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
  "bleak>=0.21.0",
  "websockets>=12.0",
  "fastapi>=0.104,<1",
  "uvicorn[standard]>=0.24,<1",
  "pydantic>=2,<3",
  "requests>=2.31,<3",
  "numpy>=1.26,<2",
  "streamlit>=1.33,<2",
  "pandas>=2.0,<3",
  # Required by FastAPI/Starlette StaticFiles for async file delivery
  # under a real uvicorn server (questionnaire + system_check UIs)
  "aiofiles>=23.0",
  "sqlalchemy>=2.0",
  # HTTP client used by preflight.py health checks and internal service probes
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0",
  "pyarrow>=10.0.0",
]

[project.scripts]
system-check = "live_analytics.system_check.run_checks:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*", "live_analytics*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
  "live_analytics/tests",
  "live_analytics/system_check/tests",
  "live_analytics/questionnaire/tests",
]
python_files = "test_*.py"
